--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,6 @@
 language: java
+services: postgresql
+before_script:
+  - psql -c 'create database lunch_finder_test;' -U postgres
+  - psql lunch_finder_test -f src/main/resources/db/migrations.sql
 script: ./gradlew build
