--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 language: java
 services: postgresql
+addons:
+  postgresql: "9.4"
 before_script:
 - psql -c 'create database lunch_finder_test;' -U postgres
 - psql lunch_finder_test -f src/main/resources/db/migrations.sql
